@@ -1,6 +1,6 @@
 // This may look like C code, but it is really -*- C++ -*-
 //
-// Copyright Bob Friesenhahn, 1999, 2000
+// Copyright Bob Friesenhahn, 1999, 2000, 2001
 //
 // Implementation of Blob
 //
@@ -100,7 +100,8 @@ void Magick::Blob::update ( const void* data_, size_t length_ )
 // Any existing data in the object is deallocated.  The user must
 // ensure that the pointer supplied is not deleted or otherwise
 // modified after it has been supplied to this method.
-void Magick::Blob::updateNoCopy ( void* data_, size_t length_ )
+void Magick::Blob::updateNoCopy ( void* data_, size_t length_,
+                                  Allocator allocator_ = NewAllocator )
 {
   bool doDelete = false;
   {
@@ -116,6 +117,7 @@ void Magick::Blob::updateNoCopy ( void* data_, size_t length_ )
   _blobRef = new Magick::BlobRef( 0, 0 );
   _blobRef->_data   = data_;
   _blobRef->_length = length_;
+  _blobRef->_allocator = allocator_;
 }
 
 //
@@ -127,6 +129,7 @@ Magick::BlobRef::BlobRef ( const void* data_,
 			   size_t length_ )
   : _data(0),
     _length(length_),
+    _allocator(Blob::NewAllocator),
     _refCount(1),
     _mutexLock()
 {
@@ -140,5 +143,8 @@ Magick::BlobRef::BlobRef ( const void* data_,
 // Destructor (actually destroys data)
 Magick::BlobRef::~BlobRef ( void )
 {
-  delete static_cast<unsigned char*>(_data);
+  if ( _allocator == Blob::NewAllocator )
+      delete static_cast<unsigned char*>(_data);
+  if ( _allocator == Blob::MallocAllocator )
+    LiberateMemory(static_cast<void **>(&_data));
 }
