@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <meta name="GENERATOR" content="Mozilla/4.7 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
+   <meta name="GENERATOR" content="Mozilla/4.72 [en] (X11; U; SunOS 5.6 sun4u) [Netscape]">
    <meta name="Author" content="Bob Friesenhahn">
    <meta name="Description" content="Documentation for Blob class.">
    <meta name="Keywords" content="Magick++, ImageMagick, Blob">
@@ -53,7 +53,7 @@ may be used for other purposes as well.
 </tr>
 
 <tr NOSAVE>
-<td ROWSPAN="3" NOSAVE><font size=-1>Blob</font></td>
+<td ROWSPAN="3" NOSAVE><a NAME="Blob"></a><font size=-1>Blob</font></td>
 
 <td ROWSPAN="3" BGCOLOR="#666666" NOSAVE><font size=-1>&nbsp;</font></td>
 
@@ -76,7 +76,7 @@ data</font></td>
 </tr>
 
 <tr>
-<td><font size=-1>operator=</font></td>
+<td><a NAME="operator="></a><font size=-1>operator=</font></td>
 
 <td><font size=-1>Blob</font></td>
 
@@ -86,7 +86,7 @@ data</font></td>
 </tr>
 
 <tr>
-<td><font size=-1>update</font></td>
+<td><a NAME="update"></a><font size=-1>update</font></td>
 
 <td><font size=-1>void</font></td>
 
@@ -97,7 +97,7 @@ data. Any existing data in the object is deallocated.</font></td>
 </tr>
 
 <tr>
-<td><font size=-1>data</font></td>
+<td><a NAME="data"></a><font size=-1>data</font></td>
 
 <td><font size=-1>const void*</font></td>
 
@@ -107,7 +107,7 @@ data. Any existing data in the object is deallocated.</font></td>
 </tr>
 
 <tr>
-<td><font size=-1>length</font></td>
+<td><a NAME="length"></a><font size=-1>length</font></td>
 
 <td><font size=-1>size_t</font></td>
 
@@ -117,16 +117,20 @@ data. Any existing data in the object is deallocated.</font></td>
 </tr>
 
 <tr>
-<td><font size=-1>updateNoCopy</font></td>
+<td><a NAME="updateNoCopy"></a><font size=-1>updateNoCopy</font></td>
 
 <td><font size=-1>void</font></td>
 
-<td><font size=-1>void* data_, size_t length_</font></td>
+<td><font size=-1>void* data_, size_t length_, Blob::Allocator allocator_
+= Blob::NewAllocator</font></td>
 
 <td><font size=-1>Update object contents, using supplied pointer directly
 (no copy) Any existing data in the object is deallocated.&nbsp; The user
 must ensure that the pointer supplied is not deleted or otherwise modified
-after it has been supplied to this method.</font></td>
+after it has been supplied to this method. The optional allocator_ parameter
+allows the user to specify if the C (MallocAllocator) or C++ (NewAllocator)
+memory allocation system was used to allocate the memory. The default is
+to use the C++ memory allocator.</font></td>
 </tr>
 </table>
 
